--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -9,8 +9,8 @@ main:
   - title: "Education"
     url: "/#education"
 
-  - title: "Experiences"
-    url: "/#experiences"
+  - title: "Preprints"
+    url: "/#preprints"
 
   - title: "Publications"
     url: "/#publications"
