--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ baidu_site_verification  :  # get baidu_site_verification from https://ziyuan.ba
 # Site Author
 author:
   name             : "Yifei Chen"
-  avatar           : "images/yamada.jpg"
+  avatar           : "images/yamada.png"
   bio              : "Ph.D. Student @ GSAI, RUC"
   location         : "Beijing, China"
   employer         : "Renmin University of China"
