--- a/_config.yml
+++ b/_config.yml
@@ -57,7 +57,7 @@ author:
   xing             :
   youtube          :
   wikipedia        :
-  zhihu            : "luo-hua-fei-liu"
+  zhihu            : "people/luo-hua-fei-liu"
   xiaohongshu      : "62f8704a000000001f015bf0"
 
 
